fixed a bug while pulling the refresher that would crash the app, modified countdown to put a message at the end, removed beer icon of food events, added all the map regions, made it invisible.

--- a/src/pages/final_countdown/countdown.scss
+++ b/src/pages/final_countdown/countdown.scss
@@ -2,4 +2,8 @@ countdown{
 	.big{
 		font-size: 36px
 	}
+	.Finished{
+		font-size: 30px;
+		text-align: center;
+	}
 }
